; ModuleID = '/home/carl/AnghaBench/freebsd/sys/compat/linuxkpi/common/src/extr_linux_hrtimer.c_hrtimer_call_handler.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/compat/linuxkpi/common/src/extr_linux_hrtimer.c_hrtimer_call_handler.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.hrtimer = type { i32 (%struct.hrtimer*)*, i32, i32, i32 }

@HRTIMER_RESTART = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*)* @hrtimer_call_handler to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @hrtimer_call_handler(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca %struct.hrtimer*, align 8
  %4 = alloca i32, align 4
  store i8* %0, i8** %2, align 8
  %5 = load i8*, i8** %2, align 8
  %6 = bitcast i8* %5 to %struct.hrtimer*
  store %struct.hrtimer* %6, %struct.hrtimer** %3, align 8
  %7 = load %struct.hrtimer*, %struct.hrtimer** %3, align 8
  %8 = getelementptr inbounds %struct.hrtimer, %struct.hrtimer* %7, i32 0, i32 0
  %9 = load i32 (%struct.hrtimer*)*, i32 (%struct.hrtimer*)** %8, align 8
  %10 = load %struct.hrtimer*, %struct.hrtimer** %3, align 8
  %11 = call i32 %9(%struct.hrtimer* %10)
  store i32 %11, i32* %4, align 4
  %12 = load i32, i32* %4, align 4
  %13 = load i32, i32* @HRTIMER_RESTART, align 4
  %14 = icmp eq i32 %12, %13
  br i1 %14, label %15, label %27

15:                                               ; preds = %1
  %16 = load %struct.hrtimer*, %struct.hrtimer** %3, align 8
  %17 = getelementptr inbounds %struct.hrtimer, %struct.hrtimer* %16, i32 0, i32 1
  %18 = load %struct.hrtimer*, %struct.hrtimer** %3, align 8
  %19 = getelementptr inbounds %struct.hrtimer, %struct.hrtimer* %18, i32 0, i32 3
  %20 = load i32, i32* %19, align 8
  %21 = call i32 @nstosbt(i32 %20)
  %22 = load %struct.hrtimer*, %struct.hrtimer** %3, align 8
  %23 = getelementptr inbounds %struct.hrtimer, %struct.hrtimer* %22, i32 0, i32 2
  %24 = load i32, i32* %23, align 4
  %25 = call i32 @nstosbt(i32 %24)
  %26 = call i32 @callout_schedule_sbt(i32* %17, i32 %21, i32 %25, i32 0)
  br label %31

27:                                               ; preds = %1
  %28 = load %struct.hrtimer*, %struct.hrtimer** %3, align 8
  %29 = getelementptr inbounds %struct.hrtimer, %struct.hrtimer* %28, i32 0, i32 1
  %30 = call i32 @callout_deactivate(i32* %29)
  br label %31

31:                                               ; preds = %27, %15
  ret void
}

declare dso_local i32 @callout_schedule_sbt(i32*, i32, i32, i32) #1

declare dso_local i32 @nstosbt(i32) #1

declare dso_local i32 @callout_deactivate(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
